Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignObjectTextField.quorum
class Main
    Object v = Test()
    action Main
    end

    action Test() returns Object
        text var = "text"
        return var
    end
end